--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <!--  Replace with Carousel with timer --> 
-  	<img src="images/bg-img.png" class="bg-img">
+  	<img src="images/cycle.jpg" class="bg-img">
   	<div class="title"><b>Wheels On Roll</b></div>
 
 
@@ -23,7 +23,6 @@
 		<ul>
 		  <li><a href="#">Home</a></li>
 		  <li><a href="src/services.html">Services</a></li>
-		  <li><a href="src/gallery.html">Gallery</a></li>
 		  <li><a href="src/about.html">About</a></li>
 		</ul>
 	  </nav>
@@ -32,7 +31,7 @@
 
     <div class="container" id="home">
 
-    	<h3>Home</h3>
+    	<h1 class="label">Home</h1>
 
    		<p>
           Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -82,7 +81,6 @@
 				  <div style="padding-bottom: 20px;">Navigation<br></div>
 				    <li><a href="#">Home</a></li>
             <li><a href="src/services.html">Services</a></li>
-            <li><a href="src/gallery.html">Gallery</a></li>
             <li><a href="src/about.html">About</a></li>				  
             <li id="a-top"><a href="#">Top</a></li>
 				</ul>
