--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 
   <head>
+  <meta charset="utf-8">
 	<link href="src/css/styles.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Wheels On Roll</title>
+  <link rel="stylesheet" href="src/css/carousel.css">
+  <script type="text/javascript" src="src/js/carousel.js"></script>
 
   </head>
   <body><center>
@@ -14,6 +17,62 @@
   	<img src="images/bg-img.png" class="bg-img">
   	<div class="title"><b>Wheels On Roll</b></div>
 
+<!-- Carousel Starts here -->
+
+    <div class="carousel">
+    <input name="carousel" type="radio" value="1" checked />
+    <input name="carousel" type="radio" value="2" />
+    <input name="carousel" type="radio" value="3" />
+    <input name="carousel" type="radio" value="4" />
+    <input name="carousel" type="radio" value="5" />
+    <ul class="carousel-list">
+        <li>
+      <img src="images/test.jpg">
+      <div class="event">
+        <div class="event_head">Event 1</div>
+        <div class="event_cap">Event Caption...</div>
+        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
+      </div>
+    </li>
+    <li>
+      <img src="images/test.jpg">
+      <div class="event">
+        <div class="event_head">Event 2</div>
+        <div class="event_cap">Event Caption...</div>
+        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
+      </div>
+    </li>
+        <li>
+      <img src="images/test.jpg">
+      <div class="event">
+        <div class="event_head">Event 3</div>
+        <div class="event_cap">Event Caption...</div>
+        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
+      </div>
+    </li>
+        <li>
+      <img src="images/test.jpg">
+      <div class="event">
+        <div class="event_head">Event 4</div>
+        <div class="event_cap">Event Caption...</div>
+        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
+      </div>
+    </li>
+        <li>
+      <img src="images/test.jpg">
+      <div class="event">
+        <div class="event_head">Event 5</div>
+        <div class="event_cap">Event Caption...</div>
+        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
+      </div>
+    </li>
+    </ul>
+  <button onclick="prev()"><<</button>&nbsp;&nbsp;&nbsp;
+  <button onclick="next()">>></button>
+</div></center>
+
+
+<!--Carousel ends here-->
 
 	<header>
 	  <div class="head-container">
