--- a/index.html
+++ b/index.html
@@ -10,69 +10,13 @@
   <script type="text/javascript" src="src/js/carousel.js"></script>
 
   </head>
-  <body><center>
+  <body onload="start_rolling()"><center>
 
 
   <!--  Replace with Carousel with timer --> 
   	<img src="images/cycle.jpg" class="bg-img">
   	<div class="title"><b>Wheels On Roll</b></div>
 
-<!-- Carousel Starts here -->
-
-    <div class="carousel">
-    <input name="carousel" type="radio" value="1" checked />
-    <input name="carousel" type="radio" value="2" />
-    <input name="carousel" type="radio" value="3" />
-    <input name="carousel" type="radio" value="4" />
-    <input name="carousel" type="radio" value="5" />
-    <ul class="carousel-list">
-        <li>
-      <img src="images/test.jpg">
-      <div class="event">
-        <div class="event_head">Event 1</div>
-        <div class="event_cap">Event Caption...</div>
-        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
-      </div>
-    </li>
-    <li>
-      <img src="images/test.jpg">
-      <div class="event">
-        <div class="event_head">Event 2</div>
-        <div class="event_cap">Event Caption...</div>
-        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
-      </div>
-    </li>
-        <li>
-      <img src="images/test.jpg">
-      <div class="event">
-        <div class="event_head">Event 3</div>
-        <div class="event_cap">Event Caption...</div>
-        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
-      </div>
-    </li>
-        <li>
-      <img src="images/test.jpg">
-      <div class="event">
-        <div class="event_head">Event 4</div>
-        <div class="event_cap">Event Caption...</div>
-        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
-      </div>
-    </li>
-        <li>
-      <img src="images/test.jpg">
-      <div class="event">
-        <div class="event_head">Event 5</div>
-        <div class="event_cap">Event Caption...</div>
-        <div class="event_des">This is the description for the event...<br>The quick brown fox jumped over the lazy dog...</div>
-      </div>
-    </li>
-    </ul>
-  <button onclick="prev()"><<</button>&nbsp;&nbsp;&nbsp;
-  <button onclick="next()">>></button>
-</div></center>
-
-
-<!--Carousel ends here-->
 
 	<header>
 	  <div class="head-container">
@@ -129,6 +73,40 @@
           In et metus non ante interdum varius nec in sem.
         </p>
 	</div>
+
+<!-- Carousel Starts here -->
+
+    <div class="carousel">
+      <input name="carousel" type="radio" value="1" checked />
+      <input name="carousel" type="radio" value="2" />
+      <input name="carousel" type="radio" value="3" />
+      <input name="carousel" type="radio" value="4" />
+      <input name="carousel" type="radio" value="5" />
+      <ul class="carousel-list">
+          <li>
+        <img src="images/cosmic.jpg">
+      </li>
+      <li>
+        <img src="images/cycle.jpg">
+      </li>
+          <li>
+        <img src="images/cycle1.jpg">
+      </li>
+          <li>
+        <img src="images/test.jpg">
+      </li>
+          <li>
+        <img src="images/test.jpg">
+      </li>
+      </ul>
+      <img src="images/arrow-left.png" id="arrow-left" onClick="prev()">
+      <img src="images/arrow-right.png" id="arrow-right" onClick="next()">
+
+    </div></center>
+
+
+<!--Carousel ends here-->
+
 
 	<!--
 	<img id="foot-img" class="bg-img" src="images/bg.jpg" style="padding-top:70px;">
