Added arrow down

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!--  Replace with Carousel with timer --> 
   	<img src="images/cycle.jpg" class="bg-img">
   	<div class="title"><b>Wheels On Roll</b></div>
+    <a href="#home" id="arrow-a"><img src="images/arrow-down.png" id="arrow"/></a>
 
 
 	<header>
