--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <input name="carousel" type="radio" value="5" />
       <ul class="carousel-list">
           <li>
-        <img src="images/cosmic.jpg">
+        <img src="images/wor_img1.jpeg">
       </li>
       <li>
         <img src="images/cycle.jpg">
@@ -93,10 +93,10 @@
         <img src="images/cycle1.jpg">
       </li>
           <li>
-        <img src="images/test.jpg">
+        <img src="images/wor_img2.jpeg">
       </li>
           <li>
-        <img src="images/test.jpg">
+        <img src="images/cosmic.jpg">
       </li>
       </ul>
       <img src="images/arrow-left.png" id="arrow-left" onClick="prev()">
