--- a/index.html
+++ b/index.html
@@ -38,41 +38,49 @@
     	<h1 class="label">Home</h1>
 
    		<p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis
-          nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia
-          deserunt mollit anim id est laborum.
-        </p>
-        <p>
-          Nulla efficitur pharetra leo. In convallis lobortis
-          nisl, ut pretium purus aliquam eget. Maecenas
-          vestibulum venenatis eros, a volutpat mi malesuada eu.
-          Cum sociis natoque penatibus et magnis dis parturient
-          montes, nascetur ridiculus mus. Nam mollis vitae eros
-          quis congue. Ut eget massa semper, cursus ligula et,
-          euismod lacus. Sed neque metus, tristique eget
-          scelerisque vitae, luctus at metus. Proin vel
-          ullamcorper arcu. Praesent dapibus eleifend turpis et
-          euismod. Sed tincidunt lobortis erat, nec elementum
-          libero molestie sed. Phasellus eget tristique lorem.
-        </p>
-        <p>
-          Maecenas dictum molestie nisi, eu ornare mauris posuere
-          a. Proin tempus est ligula, ut varius risus faucibus
-          nec. Morbi ultrices leo et vulputate facilisis. Nunc
-          congue, leo a facilisis dictum, metus neque tempus
-          arcu, ac aliquet nulla mi a felis. Maecenas quis
-          euismod velit. Curabitur dapibus ipsum vitae
-          ullamcorper auctor. Nullam nec ultricies urna.
-          Curabitur lacinia nec ipsum a condimentum. Quisque
-          lacinia faucibus augue, sed efficitur enim mollis eget.
-          In et metus non ante interdum varius nec in sem.
-        </p>
+          Our startup Wheels On Roll at first aims at 
+          incorporating the upcoming cycling culture of the 
+          campus and raising it to become a college lingo 
+          by making bike sharing a possibility while keeping 
+          the availability of cycles affordable and accessible 
+          at all times.
+      </p>
+
+      <p>
+          Encompassing new edge technology we plan at making 
+          the bike sharing  manual free and app friendly 
+          under the project name "Digitally enabled automatic 
+          cycle rental with advance locking mechanism"
+      </p>
+
+      <p>
+          We also intend to spread to different campuses over 
+          a certain period of time. As a pilot run we have already 
+          launched 8 cycles which are running successfully on a 
+          stipulated Time for an year with 33% female customers
+      </p>
+
+      <h3 class="label">TARGET MARKET</h3>
+      <p>
+        We aim on spreading to different campuses{institutional 
+        and residential} and target the potential customers residing.
+      </p>
+
+      <h3 class="label">MOTIVATION</h3>
+      <p>
+        As a college student we have ourselves realised the 
+        need of cycles in our day to day life where in our focus 
+        is not on increasing the assets which comes with trouble 
+        of maintenances and disposing the cycles after  the end of 
+        the tenure.
+
+      <h3 class="label">USP</h3>
+      <p>
+        Customers can relish the ownership  of the cycles for 
+        the time period they have and our maintenance policies 
+        and services let them experience a hassle free renting tenure.
+      </p>
+        
 	</div>
 
 <!-- Carousel Starts here -->
