About Page - Core Team

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<ul>
 		  <li><a href="goTo('home')">Home</a></li>
 		  <li><a href="src/services.html">Services</a></li>
-		  <li><a href="src/about.html">About</a></li>
+		  <li><a href="src/team.html">Team</a></li>
 		</ul>
 	  </nav>
 	  </div>
@@ -136,7 +136,7 @@
 				  <div style="padding-bottom: 20px;">Navigation<br></div>
 				    <li><a href="#">Home</a></li>
             <li><a href="src/services.html">Services</a></li>
-            <li><a href="src/about.html">About</a></li>				  
+            <li><a href="src/team.html">Team</a></li>				  
             <li id="a-top"><a href="" onClick="window.scroll({top:0, behavior:'smooth'})">Top</a></li>
 				</ul>
 			</div>
