--- a/src/services.html
+++ b/src/services.html
@@ -24,7 +24,7 @@
 		<ul>
 		  <li><a href="../index.html">Home</a></li>
 		  <li><a href="#">Services</a></li>
-		  <li><a href="about.html">About</a></li>
+		  <li><a href="team.html">Team</a></li>
 		</ul>
 	  </nav>
 	  </div>
@@ -82,7 +82,7 @@
 				  <div style="padding-bottom: 20px;">Navigation<br></div>
 				  <li><a href="../index.html">Home</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="team.html">Team</a></li>
 				  <li id="a-top"><a href="#">Top</a></li>
 				</ul>
 			</div>
