--- a/src/team.html
+++ b/src/team.html
@@ -2,6 +2,7 @@
 
   <head>
 	<link href="css/styles.css" rel="stylesheet">
+  <link href="css/team.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Wheels On Roll</title>
@@ -9,12 +10,6 @@
   </head>
   <body><center>
 
-<!--
-    Replace with Carousel with timer 
-  	<img src="images/bg-img.png" class="bg-img">
-  	<div class="title"><b>MyPage</b></div>
-
--->
 
 	<header>
 	  <div class="head-container">
@@ -24,56 +19,50 @@
 		<ul>
 		  <li><a href="../index.html">Home</a></li>
 		  <li><a href="services.html">Services</a></li>
-		  <li><a href="#">About</a></li>
+		  <li><a href="#">Team</a></li>
 		</ul>
 	  </nav>
 	  </div>
     </header>
 
-	<div class="container" id="about">
+	<div class="container" id="gallery" style="display: table;">
 
-    	<h3>About</h3>
+    <h2 class="label">Core Team</h2>
 
-   		<p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis
-          nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia
-          deserunt mollit anim id est laborum.
-        </p>
-        <p>
-          Nulla efficitur pharetra leo. In convallis lobortis
-          nisl, ut pretium purus aliquam eget. Maecenas
-          vestibulum venenatis eros, a volutpat mi malesuada eu.
-          Cum sociis natoque penatibus et magnis dis parturient
-          montes, nascetur ridiculus mus. Nam mollis vitae eros
-          quis congue. Ut eget massa semper, cursus ligula et,
-          euismod lacus. Sed neque metus, tristique eget
-          scelerisque vitae, luctus at metus. Proin vel
-          ullamcorper arcu. Praesent dapibus eleifend turpis et
-          euismod. Sed tincidunt lobortis erat, nec elementum
-          libero molestie sed. Phasellus eget tristique lorem.
-        </p>
-        <p>
-          Maecenas dictum molestie nisi, eu ornare mauris posuere
-          a. Proin tempus est ligula, ut varius risus faucibus
-          nec. Morbi ultrices leo et vulputate facilisis. Nunc
-          congue, leo a facilisis dictum, metus neque tempus
-          arcu, ac aliquet nulla mi a felis. Maecenas quis
-          euismod velit. Curabitur dapibus ipsum vitae
-          ullamcorper auctor. Nullam nec ultricies urna.
-          Curabitur lacinia nec ipsum a condimentum. Quisque
-          lacinia faucibus augue, sed efficitur enim mollis eget.
-          In et metus non ante interdum varius nec in sem.
-        </p>
-	</div>
-  <!--
-	<img id="foot-img" class="bg-img" src="images/bg.jpg" style="padding-top:70px;">
-  -->
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>CEO</h3>
+        <img src="../images/team_pratyush.jpg">
+        <div style="padding: 2%;">Pratyush Giri</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>CFO</h3>
+        <img src="../images/team_piyush.jpg">
+        <div style="padding: 2%;">Piyush Bansal</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>  
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>CCO</h3>
+        <img src="../images/team_amartya.jpeg">
+        <div style="padding: 2%;">Amartya Gupta</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>CTO</h3>
+        <img src="../images/team_jeshventh.jpg">
+        <div style="padding: 2%;">Jeshventh TK Raja</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>
+  </div>
+  
 	<div class="footer">
 		<div class="container" id="about">
 			<div class="navi">
@@ -81,7 +70,7 @@
 				  <div style="padding-bottom: 20px;">Navigation<br></div>
 				  <li><a href="../index.html">Home</a></li>
 				  <li><a href="services.html">Services</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Team</a></li>
 				  <li id="a-top"><a href="#">Top</a></li>
 				</ul>
 			</div>
@@ -90,8 +79,7 @@
 				<p>An NITK Startup</p>
 				<p>Our Quest to change the world</p>
 				<a href="github.com/Hrily">GitHub</a>
-			</div>
-			
+			</div>	
 		</div>
 	</div>
 
