--- a/src/team.html
+++ b/src/team.html
@@ -27,6 +27,7 @@
 
 	<div class="container" id="gallery" style="display: table;">
 
+    <br>
     <h2 class="label">Core Team</h2>
 
     <div class="gallery-row">
@@ -57,6 +58,45 @@
         <h3>CTO</h3>
         <img src="../images/team_jeshventh.jpg">
         <div style="padding: 2%;">Jeshventh TK Raja</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>
+  </div>
+
+<div class="container" id="gallery" style="display: table;">
+
+    <br>
+    <h2 class="label">Tech Team</h2>
+
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>Tech Lead - EC</h3>
+        <img src="../images/team_tarun.jpg">
+        <div style="padding: 2%;">Tarun Mittal</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>Tech Lead - CS</h3>
+        <img src="../images/team_hrishi.jpg">
+        <div style="padding: 2%;">Hrishi Hiraskar</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>  
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>Tech Support</h3>
+        <img src="../images/team_salman.jpg">
+        <div style="padding: 2%;">Salman Shah</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>Tech Support</h3>
+        <img src="../images/team_rohan.jpg">
+        <div style="padding: 2%;">Rohan Surve</div>
         <div style="padding: 2%;">00000 00000</div>
         <div style="padding: 2%;">abc@example.com</div>
       </div>
