--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--  Replace with Carousel with timer --> 
   	<img src="images/cycle.jpg" class="bg-img">
   	<div class="title"><b>Wheels On Roll</b></div>
-    <img src="images/arrow-down.png" id="arrow" onclick="goTo('home')" />
+    <img src="images/arrow-down.png" id="arrow" onclick="goTo('about')" />
 
 
 	<header>
@@ -30,67 +30,63 @@
 	  <nav>
 		<a id="menu-icon"><img src="images/menu-icon.png"></a>
 		<ul>
-		  <li><a href="goTo('home')">Home</a></li>
-		  <li><a href="src/services.html">Services</a></li>
+		  <li><a href="javascript:goTo('about')">About</a></li>
+		  <li><a href="javascript:goTo('services')">Services</a></li>
 		  <li><a href="src/team.html">Team</a></li>
 		</ul>
 	  </nav>
 	  </div>
     </header>
-
-    <div class="container" id="home">
-
-    	<h1 class="label">Home</h1>
-
-   		<p>
-          Our startup Wheels On Roll at first aims at 
-          incorporating the upcoming cycling culture of the 
-          campus and raising it to become a college lingo 
-          by making bike sharing a possibility while keeping 
-          the availability of cycles affordable and accessible 
-          at all times.
-      </p>
-
-      <p>
-          Encompassing new edge technology we plan at making 
-          the bike sharing  manual free and app friendly 
-          under the project name "Digitally enabled automatic 
-          cycle rental with advance locking mechanism"
-      </p>
-
-      <p>
-          We also intend to spread to different campuses over 
-          a certain period of time. As a pilot run we have already 
-          launched 8 cycles which are running successfully on a 
-          stipulated Time for an year with 33% female customers
-      </p>
-
-      <h3 class="label">TARGET MARKET</h3>
-      <p>
-        We aim on spreading to different campuses{institutional 
-        and residential} and target the potential customers residing.
-      </p>
-
-      <h3 class="label">MOTIVATION</h3>
-      <p>
-        As a college student we have ourselves realised the 
-        need of cycles in our day to day life where in our focus 
-        is not on increasing the assets which comes with trouble 
-        of maintenances and disposing the cycles after  the end of 
-        the tenure.
-
-      <h3 class="label">USP</h3>
-      <p>
-        Customers can relish the ownership  of the cycles for 
-        the time period they have and our maintenance policies 
-        and services let them experience a hassle free renting tenure.
-      </p>
         
+    <div class="container" id="about">
+
+    	<h1 class="label">About</h1>
+
+      <p>
+        <span class="label">Wheels on Roll (WOR)</span> 
+        is a service-oriented company with the prime aim to
+        provide bicycles to the students on a rent for every semester or a similar
+        stipulated time. The company allows the customers to own bicycles for their own
+        personal use for a fixed amount of rent and deposit.
+        The company goals are to simply utilize the presence of
+        a demand for bicycles on rent and capitalize on it and at the same time commit to
+        a social cause (under Green Initiative of Smart City plan for Mangalore) for
+        helping the students. Renting the bicycles for every semester will allow the
+        students who are comfortable on not increasing their asset during their stay in
+        the college, to use them during the time period they are comfortable with and
+        return them when they don’t have use for it, without the hassles of selling the
+        cycle at a loss.
+      </p>
+      <p>
+        Also one of the star points of this venture is the absence
+        of a company/start-up with a similar idea in the country. This is the most ideal
+        situation to nurture and develop a start-up with this idea.
+        Talking about facts, we have received 150 responses
+        according to our survey of people who are ready to rent a bicycle for a year as a
+        start. And impressively all of these responses were recorded in a span of just
+        fifteen days. Moreover for the pilot run we already have 8 cycles rolling
+        successfully over the span of one month with 37.5% female users.
+      </p>
+      <p>
+        We are delighted on announcing our successful effort in
+        grabbing a place in STEP (College Start-up incubation centre) and also in getting a
+        dedicated place in the campus to have our Working Yard, where in the
+        maintenance related work for all the existing cycles in the campus is carried out
+        under the banner WOR Services.
+      </p>
+      <p>
+        Wheels on Roll is also planning to start its new
+        technically sound initiative known as “Digitally Enabled Advanced Cycle Rental
+        with advanced Locking Mechanism”, which has also attracted attention of IBM’s
+        Vanitha Narayanan (IBM India Managing Director and Regional General Manager
+        India/South Asia (ISA) ) and had been promised with Technical Aid from IBM. And
+        we are aiming at summer 2017 for coming up with our first prototype.
+      </p>
 	</div>
 
 <!-- Carousel Starts here -->
 
-  <div class="container">
+  <div class="carousel-container">
     <center>
     <div class="carousel">
       <input name="carousel" type="radio" value="1" checked />
@@ -125,26 +121,57 @@
 
 <!--Carousel ends here-->
 
+  <div class="container" id="services">
 
-	<!--
-	<img id="foot-img" class="bg-img" src="images/bg.jpg" style="padding-top:70px;">
--->
+    <h1 class="label">Services</h1>
+
+    <div class="service">
+      <img src="images/rental.png" width="9%" />
+      <span>
+      <h3 class="label">Automated Rental Services</h3>
+      Enhancing the cycling rental services by Digitally enabling Automated Cycle Rental Services alongwith advance locking Mechanism.
+      </span>
+    </div>
+    <div class="service">
+      <img src="images/lease.png" width="8%" style="left: 0.5%" />
+      <span>
+      <h3 class="label">Lease Services</h3>
+      Providing the cycles on lease to campus inmates for a stipulated time, flexible according to customer need.
+      </span>
+    </div>
+    <div class="service">
+      <img src="images/events.png" width="8%" />
+      <span>
+      <h3 class="label">Service for Events</h3>
+      Undertake easy to rent policy for events or activities of shorter duration.
+      </span>
+    </div>
+    <div class="service">
+      <img src="images/repair.png" width="8%" />
+      <span>
+      <h3 class="label">Repair Services</h3>
+      Providing mechanical assistance to all the cycles in the campus where in WOR customers enjoy added benefits
+      </span>
+    </div>
+
+  </div>
+
 	<div class="footer">
 		<div class="container" id="about">
 			<div class="navi">
 				<ul>
 				  <div style="padding-bottom: 20px;">Navigation<br></div>
-				    <li><a href="#">Home</a></li>
-            <li><a href="src/services.html">Services</a></li>
-            <li><a href="src/team.html">Team</a></li>				  
-            <li id="a-top"><a href="" onClick="window.scroll({top:0, behavior:'smooth'})">Top</a></li>
+			    <li><a href="javascript:goTo('about');">About</a></li>
+          <li><a href="javascript:goTo('services')">Services</a></li>
+          <li><a href="src/team.html">Team</a></li>				  
+          <li><a href="javascript:window.scroll({top:0, behavior:'smooth'})">Top</a></li>
 				</ul>
 			</div>
 			<div class="about">
 				<h4>Wheels On Roll</h4>
 				<p>An NITK Startup</p>
 				<p>Our quest to create a Pollution-Free world</p>
-				<a href="github.com/hrily">GitHub</a>
+        <p><a href="https://www.facebook.com/Wheelsonroll"><img src="images/fb-logo.png" height="40px" /></a></p>
 			</div>
 			
 		</div>
