--- a/src/team.html
+++ b/src/team.html
@@ -27,19 +27,30 @@
 
 	<div class="container" id="gallery" style="display: table;">
 
+    <br>
     <h2 class="label">Core Team</h2>
 
     <div class="gallery-row">
       <div class="gallery">
         <h3>CEO</h3>
-        <img src="../images/team_pratyush.jpg">
+        <div class = "images">
+          <img src="../images/team_pratyush.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
         <div style="padding: 2%;">Pratyush Giri</div>
         <div style="padding: 2%;">00000 00000</div>
         <div style="padding: 2%;">abc@example.com</div>
       </div>
       <div class="gallery">
         <h3>CFO</h3>
-        <img src="../images/team_piyush.jpg">
+        <div class = "images">
+          <img src="../images/team_piyush.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
         <div style="padding: 2%;">Piyush Bansal</div>
         <div style="padding: 2%;">00000 00000</div>
         <div style="padding: 2%;">abc@example.com</div>
@@ -48,15 +59,84 @@
     <div class="gallery-row">
       <div class="gallery">
         <h3>CCO</h3>
-        <img src="../images/team_amartya.jpeg">
+        <div class = "images">
+          <img src="../images/team_amartya.jpeg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
         <div style="padding: 2%;">Amartya Gupta</div>
         <div style="padding: 2%;">00000 00000</div>
         <div style="padding: 2%;">abc@example.com</div>
       </div>
       <div class="gallery">
         <h3>CTO</h3>
-        <img src="../images/team_jeshventh.jpg">
+        <div class = "images">
+          <img src="../images/team_jeshventh.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
         <div style="padding: 2%;">Jeshventh TK Raja</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>
+  </div>
+
+<div class="container" id="gallery" style="display: table;">
+
+    <br>
+    <h2 class="label">Tech Team</h2>
+
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>Tech Lead - EC</h3>
+        <div class = "images">
+          <img src="../images/team_tarun.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
+        <div style="padding: 2%;">Tarun Mittal</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>Tech Lead - CS</h3>
+        <div class = "images">
+          <img src="../images/team_hrishi.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
+        <div style="padding: 2%;">Hrishi Hiraskar</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>  
+    <div class="gallery-row">
+      <div class="gallery">
+        <h3>Tech Support</h3>
+        <div class = "images">
+          <img src="../images/team_salman.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
+        <div style="padding: 2%;">Salman Shah</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+      <div class="gallery">
+        <h3>Tech Support</h3>
+        <div class = "images">
+          <img src="../images/team_rohan.jpg">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+        </div>
+        <div style="padding: 2%;">Rohan Surve</div>
         <div style="padding: 2%;">00000 00000</div>
         <div style="padding: 2%;">abc@example.com</div>
       </div>
