--- a/src/team.html
+++ b/src/team.html
@@ -133,6 +133,28 @@
         <div style="padding: 2%;">abc@example.com</div>
       </div>
     </div>  
+
+
+    <div class="gallery-row">
+      <div class="gallery-mid">
+        <h3>Tech Lead - EC</h3>
+        <div class = "images">
+          <img src="../images/team_mohiitaa.jpg" id="dp1">
+          <a href="https://www.linkedin.com">
+            <img src="../images/linkedin-logo.png" id="social-media-mid">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1-mid">
+          </a>
+        </div>
+        <div style="padding: 2%;">Mohiitaa Chowdhury</div>
+        <div style="padding: 2%;">00000 00000</div>
+        <div style="padding: 2%;">abc@example.com</div>
+      </div>
+    </div>  
+
+
+
     <div class="gallery-row">
       <div class="gallery">
         <h3>Tech Support</h3>
